--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "Código desenvolvido para o projeto da disciplina Bancos de Dados, no semestre 2025.1 na Universidade de Brasília",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "pg": "^8.16.2",
-    "express": "^5.1.0"
+    "typescript": "^5.8.3"
   }
 }
