--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "pg": "^8.16.2",
     "typescript": "^5.8.3"
   }
