--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sigabd",
+  "name": "sigbd",
   "version": "1.0.0",
   "main": "API/sigbd-api.js",
   "scripts": {
@@ -16,7 +16,6 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
-    "pg": "^8.16.2",
-    "typescript": "^5.8.3"
-  }
+    "pg": "^8.16.2"
+    }
 }
